--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <header>
-        <a href="#"><img src="/img/GathSession..png" alt="logotipo gathsession"></a>
+        <a href="#"><img src="./img/GathSession..png" alt="logotipo gathsession"></a>
         <div class="nav_principal">
           <ul>
             <li><a href="#">Home</a></li>
@@ -35,29 +35,29 @@
           <div class="botton_hero">
             <ul>
               <li><a href="#">Get Started</a></li>
-              <li><a href="#">Learn Mores</a><img src="/img/Arrow.svg" alt="flecha"></li>
+              <li><a href="#">Learn Mores</a><img src="./img/Arrow.svg" alt="flecha"></li>
             </ul>
           </div>
         </section>
         <section class="hero_izquierda">
-          <img src="/img/image.png" alt="imagen" width="180px" height="430px">
-          <img src="/img/image (1).png" alt="imagen1" width="180px" height="180px">
-          <img src="/img/image (2).png" alt="imagen2" width="180px" height="180px">
-          <img src="/img/image (3).png" alt="imagen3" width="180px" height="430px">
-          <img class="ultima" src="/img/image (4).png" alt="imagen4" width="180px" height="430px">
+          <img src="./img/image.png" alt="imagen" width="180px" height="430px">
+          <img src="./img/image (1).png" alt="imagen1" width="180px" height="180px">
+          <img src="./img/image (2).png" alt="imagen2" width="180px" height="180px">
+          <img src="./img/image (3).png" alt="imagen3" width="180px" height="430px">
+          <img class="ultima" src="./img/image (4).png" alt="imagen4" width="180px" height="430px">
         </section>
       </section>
       <section class="numeros">
         <article>
-          <img src="/img/icon.png" alt="special tratament">
+          <img src="./img/icon.png" alt="special tratament">
           <h3>Build Community</h3>
         </article>
         <article>
-          <img src="/img/icon (1).png" alt="profesional therapist">
+          <img src="./img/icon (1).png" alt="profesional therapist">
           <h3>Share Events</h3>
         </article>
         <article>
-          <img src="/img/icon (2).png" alt="special tratament">
+          <img src="./img/icon (2).png" alt="special tratament">
           <h3>Get Information</h3>
         </article>
       </section>
